--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -12,3 +12,10 @@
 .badge-success {
   background-color: #1b758e;
 }
+.cart-product {
+  border-radius: 15px;
+}
+.card-img-top {
+  border-top-right-radius: 15px;
+  border-top-left-radius: 15px;
+}
